# samplepackage

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  zen.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: Helpful Git Commands.md  Local Installation.md  Publishing.md  Unit Tests.md  Virtual Environments.md
src/pycounts/: __init__.py
src/samplepackage/: __init__.py  script.py
tests/: test_pycounts.py  test_samplepackage.py
