[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pycounts"
authors = [
    {name = "Vivek Kaushik", email = "kingvkaushik@gmail.com"},
]
version = "1.0.0"
description = "Counts Words in a Text File"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests", 'importlib-metadata', 'matplotlib']
[project.optional-dependencies]
optional_dependencies =['pytest' ,'jupyter']
dynamic = ["version"]

