[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "samplepackage"
authors = [
    {name = "Vivek Kaushik", email = "kingvkaushik@gmail.com"},
]
version = "1.0.0"
description = "A sample python package for reference"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = ['numpy']

[project.optional-dependencies]
optional_dependencies =['pytest' ,'jupyter']
dynamic = ["version"]

